syntax = "proto3";

// IMPORTANT: Package name must match backend expectation for gRPC service discovery
// The full gRPC service name is: confidence.flags.resolver.v1.InternalFlagLoggerService
package confidence.flags.resolver.v1;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "confidence/resolver_types.proto";

option go_package = "github.com/spotify/confidence-resolver/openfeature-provider/go/confidence/proto/resolverinternal";
option java_package = "com.spotify.confidence.flags.resolver.v1";
option java_multiple_files = true;
option java_outer_classname = "InternalApiProto";

// Simplified from confidence-resolver/protos/confidence/flags/resolver/v1/internal_api.proto
// Annotations removed for minimal dependencies

service InternalFlagLoggerService {
  // Client writes flag assignment events and resolve logs using client secret authentication.
  rpc ClientWriteFlagLogs(WriteFlagLogsRequest) returns (WriteFlagLogsResponse);
}

// The service that allows to report flag assigned and other client-side flag
// operations, useful when the resolve engine runs on the customer's premises
message WriteFlagLogsRequest {
  repeated FlagAssigned flag_assigned = 1;

  TelemetryData telemetry_data = 2;

  repeated ClientResolveInfo client_resolve_info = 3;
  repeated FlagResolveInfo flag_resolve_info = 4;
}

message WriteFlagLogsResponse {}

// Collection of telemetry metrics
message TelemetryData {
  // Information about the SDK/provider
  confidence.resolver.Sdk sdk = 2;
}

message ClientInfo {
  string client = 1;
  string client_credential = 2;

  // Information about the SDK used to interact with the API.
  confidence.resolver.Sdk sdk = 3;
}

message FlagAssigned {
  string resolve_id = 10;

  ClientInfo client_info = 3;

  repeated AppliedFlag flags = 15;

  message AppliedFlag {
    string flag = 1;

    string targeting_key = 2;
    string targeting_key_selector = 3;

    oneof assignment {
      AssignmentInfo assignment_info = 4;
      DefaultAssignment default_assignment = 5;
    }

    string assignment_id = 6;

    string rule = 7;

    repeated FallthroughAssignment fallthrough_assignments = 8;
    google.protobuf.Timestamp apply_time = 9;
  }

  message AssignmentInfo {
    string segment = 1;
    string variant = 2;
  }

  message DefaultAssignment {
    DefaultAssignmentReason reason = 1;
    enum DefaultAssignmentReason {
      DEFAULT_ASSIGNMENT_REASON_UNSPECIFIED = 0;
      NO_SEGMENT_MATCH = 1;
      NO_TREATMENT_MATCH = 2 [deprecated = true];
      FLAG_ARCHIVED = 3;
    }
  }
}

message FallthroughAssignment {
  string rule = 1;

  string assignment_id = 2;

  string targeting_key = 3;
  string targeting_key_selector = 4;
}

message ClientResolveInfo {
  // Resource reference to a client.
  string client = 1;

  // Resource reference to a credential.
  string client_credential = 2;

  // The different evaluation context schema of the client that have been seen recently.
  repeated EvaluationContextSchemaInstance schema = 3;

  // An instance of a schema that was seen
  message EvaluationContextSchemaInstance {
    // Schema of each field in the evaluation context.
    map<string, int32> schema = 1;
  }
}

message FlagResolveInfo {
   // The flag the info is about
   string flag = 1;
   // Information about how variants were resolved.
   repeated VariantResolveInfo variant_resolve_info = 2;

   // Information about how a variant was resolved.
   message VariantResolveInfo {
     // If there was a variant assigned, otherwise not set
     string variant = 1;
     // Number of times the variant was resolved in this period
     int64 count = 3;
   }
}
